Fixed mockito warning