@@ -71,6 +71,7 @@ tasks {
 
     test {
         useJUnitPlatform()
+        jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
     }
 }
 
